# vegan-converter

./: .gitignore  CLAUDE.md  Dockerfile  Dockerfile.frontend  Dockerfile.frontend.wrong  GETTING_STARTED.md  README.md  TEST_COVERAGE.md  docker-compose.yml  railway.json
.github/workflows/: e2e-tests.yml
.railway/: frontend.dockerfile
backend/: .env.dev  .env.prod  Dockerfile  Dockerfile.test  main.py  pyproject.toml  routers.json  start.sh
backend/app/: env.py
backend/app/apis/photo_analysis/: __init__.py
backend/app/apis/recipe_conversion/: __init__.py
backend/app/apis/vegan_weapons/: __init__.py
backend/app/internal/: config.py
backend/app/internal/extensions/: auth.py  firebase_auth.py  oidc_auth.py  stack_auth.py
backend/app/internal/mw/: auth_mw.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  playwright.config.ts  railway.json  vite.config.ts
frontend/e2e/: api.spec.ts  convert.spec.ts  navigation.spec.ts  vegan-weapons.spec.ts
frontend/playwright-report/: index.html
frontend/src/: index.css  user-routes.tsx
frontend/src/apiclient/: Apiclient.ts  ApiclientRoute.ts  data-contracts.ts
frontend/src/components/: CameraCapture.tsx  DebugLog.tsx  Footer.tsx
frontend/src/pages/: App.tsx  Convert.tsx  VeganWeapons.tsx
frontend/src/utils/: analytics.ts
frontend/test-results/: .last-run.json
frontend/test-results/convert-Convert-Page-shoul-21bdd-n-reset-action-is-triggered-chromium/: error-context.md
frontend/test-results/convert-Convert-Page-should-display-recipe-conversion-form-chromium/: error-context.md
(+5 files in other folders)
