[project]
name = "app"
version = "2.0.0"
description = "Vegan Converter - Transform recipes to plant-based"
authors = [{ name = "Laila Madsø", email = "lmadsoe@gmail.com" }]

requires-python = ">=3.11,<3.12"
dependencies = []

[dependency-groups]
base = [
  "uvicorn[standard]>=0.34.0",
  "fastapi>=0.115.7",
  "pydantic>=2.5.0",
  "httpx>=0.28.1",
  "python-multipart>=0.0.9",
  "pyjwt>=2.10.1",
  "cryptography>=44.0.0",
  "asyncpg>=0.30.0",
  "dotenv>=0.9.9",
  "openai>=1.0.0",
]
dev = ["asyncpg-stubs>=0.30.2", "pytest>=8.4.2"]
app = []

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv]
required-environments = [
  "sys_platform == 'linux' and platform_machine == 'x86_64'",
  "sys_platform == 'darwin' and platform_machine == 'arm64'",
]
